--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.application.name=program-service-api
 
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=Program
+spring.data.mongodb.database=lms
+
+#eureka config
+eurka.client.service.url=defaultZone=http://localhost:8761/eureka
